--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "lawfirm-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "home",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "classnames": "^2.5.1",
+    "postcss-load-config": "^2.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "dev": "webpack serve",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,11 +46,13 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.7",
-    "react-icons": "^4.3.1",
-    "react-scroll": "^1.8.7",
-    "swiper": "^8.0.7",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "postcss-loader": "^8.1.1",
+    "react-icons": "^5.4.0",
+    "react-scroll": "^1.9.2",
+    "swiper": "^11.2.4",
+    "tailwindcss": "^4.0.6",
+    "webpack-cli": "^6.0.1"
   }
 }
