--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lawfirm-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "home",
+  "homepage": "https://godakvolkan.github.io/lawfirm-website-starter/",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "gh-pages": "^6.3.0",
     "postcss": "^7.0.39",
     "postcss-loader": "^8.1.1",
     "react-icons": "^5.4.0",
